force-app/main/default/objects/SPEN_CommunicationScheduler__c/SPEN_CommunicationScheduler__c.object-meta.xml
<CustomObject>
    <description>Use this object to immediately or schedule a bulk outbound communication via SMS, Voice Alerts, etc.</description>
    <label>Communication Scheduler</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Schedulers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>