force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/EventID__c.field-meta.xml
<CustomField>
    <fullName>EventID__c</fullName>
    <label>Related Event Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>