force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_Account__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communication Schedulers</relationshipLabel>
    <relationshipName>Communication_Schedulers</relationshipName>
    <type>Lookup</type>
</CustomField>