force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_Action__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Action__c</fullName>
    <description>The action that the agent selected.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send SMS to All Customers</fullName>
            </value>
            <value>
                <fullName>Send SMS to Called In</fullName>
            </value>
            <value>
                <fullName>Send SMS to PSR</fullName>
            </value>
            <value>
                <fullName>Send Voice Alert to All Customers</fullName>
            </value>
            <value>
                <fullName>Send Voice Alert to Called In</fullName>
            </value>
            <value>
                <fullName>Send Voice Alert to PSR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>