force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_BatchJobId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BatchJobId__c</fullName>
    <label>Batch Job Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>