force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_BatchName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BatchName__c</fullName>
    <label>Batch Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>