force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_BatchSummary__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BatchSummary__c</fullName>
    <description>Contain the summary execution of the batch process.</description>
    <label>Batch Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>