force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>CRMD-1333</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Communication Schedulers</relationshipLabel>
    <relationshipName>Communication_Schedulers</relationshipName>
    <type>Lookup</type>
</CustomField>