force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_Comments__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>