force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_CommunicationSchedulerType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CommunicationSchedulerType__c</fullName>
    <description>TODO: Move this to record type</description>
    <label>Communication scheduler Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voice alert</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>