force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CreatedDateTime__c</fullName>
    <description>to show created date and time in report.</description>
    <formula>CreatedDate</formula>
    <label>Created Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>