force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_Creation_Batch_Delay__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Creation_Batch_Delay__c</fullName>
    <label>Creation Batch Delay</label>
    <type>DateTime</type>
</CustomField>