force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <label>District</label>
    <length>80</length>
    <type>Text</type>
</CustomField>