force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_Event__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Event__c</fullName>
    <description>The event that initiated the creation of Communication Scheduler.</description>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3-Hour Comfort Call</fullName>
            </value>
            <value>
                <fullName>3rd Call Received</fullName>
            </value>
            <value>
                <fullName>Dropped Supply with Notice</fullName>
            </value>
            <value>
                <fullName>Dropped Supply without Notice</fullName>
            </value>
            <value>
                <fullName>Estimated Restoration Time Extended</fullName>
            </value>
            <value>
                <fullName>Incident Created</fullName>
            </value>
            <value>
                <fullName>Incident Restored</fullName>
            </value>
            <value>
                <fullName>Resource Arrival On Site</fullName>
            </value>
            <value>
                <fullName>Resource Dispatched</fullName>
            </value>
            <value>
                <fullName>Medically Dependent by District</fullName>
            </value>
            <value>
                <fullName>Planned Outage Communication</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
            <value>
                <fullName>HV proactive contact</fullName>
            </value>
            <value>
                <fullName>15days Task Creation non LVHV</fullName>
            </value>
            <value>
                <fullName>5 Days System Email LVHV</fullName>
            </value>
            <value>
                <fullName>15 Days System Email LVHV</fullName>
            </value>
            <value>
                <fullName>10 Days Task Creation LVHV</fullName>
            </value>
            <value>
                <fullName>20 Days Task Creation LVHV</fullName>
            </value>
            <value>
                <fullName>10 Days System Email Non LVHV</fullName>
            </value>
            <value>
                <fullName>45 Days System email Non LVHV</fullName>
            </value>
            <value>
                <fullName>60 Days task Create Non LVHV</fullName>
            </value>
            <value>
                <fullName>Customer Engagement Task PUM/PDM</fullName>
            </value>
            <value>
                <fullName>Customer Engagement Task HOD</fullName>
            </value>
            <value>
                <fullName>Customer Engagement Task PM</fullName>
            </value>
            <value>
                <fullName>Annual Meeting Prior 14 Days</fullName>
            </value>
            <value>
                <fullName>ITT Issued Due Date Prior 1 day</fullName>
            </value>
            <value>
                <fullName>Energisation Date Prior 14 days</fullName>
            </value>
            <value>
                <fullName>Stage 1 Energisation Date to PM</fullName>
            </value>
            <value>
                <fullName>MTM 2 Offer Expire To NGESO CCM 14 Days</fullName>
            </value>
            <value>
                <fullName>BiAnnual Meeting Prior 14 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>