force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_IncidentId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Communication Schedulers</relationshipLabel>
    <relationshipName>SPEN_CommunicationSchedulers</relationshipName>
    <type>Lookup</type>
</CustomField>