force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_Message__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Message__c</fullName>
    <description>The template or customised message to be broadcasted.</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>