force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_MessagingTaskId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_MessagingTaskId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Message Task that created the Communication Scheduler.</description>
    <label>Messaging Task</label>
    <referenceTo>SPEN_MessagingTask__c</referenceTo>
    <relationshipLabel>Communication Schedulers</relationshipLabel>
    <relationshipName>SPEN_CommunicationSchedulers</relationshipName>
    <type>Lookup</type>
</CustomField>