force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_NonPSRMessage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NonPSRMessage__c</fullName>
    <description>This field holds the message value of Non PSR</description>
    <label>Non PSR Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>