force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_PremiseQuery__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PremiseQuery__c</fullName>
    <label>SPEN Premise Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>