force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_ScheduledDate__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ScheduledDate__c</fullName>
    <label>Scheduled date</label>
    <type>DateTime</type>
</CustomField>