force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_ScheduledDateTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ScheduledDateTime__c</fullName>
    <inlineHelpText>The system will only recognize this if the Send Now? field is set to No. The value must be future date/time.</inlineHelpText>
    <label>Scheduled Date and Time</label>
    <type>DateTime</type>
</CustomField>