force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_SendNow__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendNow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informs the scheduler when to trigger the mass communication process.</description>
    <label>Instant Send</label>
    <type>Checkbox</type>
</CustomField>