force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_SendSMSMCtocalledin__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendSMSMCtocalledin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field refers to Send SMS to Non PSR Called in functionality</description>
    <label>Send SMS to Non PSR Called in</label>
    <type>Checkbox</type>
</CustomField>