force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_SendSMSMCtoPSR__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendSMSMCtoPSR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field refers to Send SMS to PSR Customers in Scope functionality</description>
    <label>Send SMS to PSR Customers in Scope</label>
    <type>Checkbox</type>
</CustomField>