force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_SendSMStoAllCustomerinScope__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendSMStoAllCustomerinScope__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This Field refers to Send SMS to Non PSR Customers in Scope functionality</description>
    <label>Send SMS to Non PSR Customers in Scope</label>
    <type>Checkbox</type>
</CustomField>