force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_SendSMStoPSRCalledin__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendSMStoPSRCalledin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send SMS to PSR Called in</label>
    <type>Checkbox</type>
</CustomField>