force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_SendVAtoAllCustomerinScope__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendVAtoAllCustomerinScope__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VA to Non PSR Customers in Scope</label>
    <type>Checkbox</type>
</CustomField>