force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_SendVAtoPSRCalledin__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendVAtoPSRCalledin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VA to PSR Called in</label>
    <type>Checkbox</type>
</CustomField>