force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_SendVoiceAlerttocalledin__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendVoiceAlerttocalledin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VA to Non PSR Called in</label>
    <type>Checkbox</type>
</CustomField>