force-app/main/default/objects/SPEN_CommunicationScheduler__c/fields/SPEN_SendVoiceAlerttoPSR__c.field-meta.xml
<CustomField>
    <fullName>SPEN_SendVoiceAlerttoPSR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send VA to PSR Customers in Scope</label>
    <type>Checkbox</type>
</CustomField>