force-app/main/default/objects/SPEN_CommunicationScheduler__c/recordTypes/SmsBroadcast.recordType-meta.xml
<RecordType>
    <fullName>SmsBroadcast</fullName>
    <active>true</active>
    <description>Use this record type to initiate an SMS broadcast.</description>
    <label>SMS Broadcast</label>
</RecordType>