force-app/main/default/objects/SPEN_CommunicationScheduler__c/recordTypes/SPEN_EmailNotification.recordType-meta.xml
<RecordType>
    <fullName>SPEN_EmailNotification</fullName>
    <active>true</active>
    <description>CRMD-1333</description>
    <label>Email Notification</label>
</RecordType>