force-app/main/default/objects/SPEN_CommunicationScheduler__c/recordTypes/SPEN_TaskNotification.recordType-meta.xml
<RecordType>
    <fullName>SPEN_TaskNotification</fullName>
    <active>true</active>
    <description>ICS-1333</description>
    <label>Task Notification</label>
</RecordType>