force-app/main/default/objects/SPEN_CommunicationScheduler__c/recordTypes/SPEN_VoiceAlertBroadcast.recordType-meta.xml
<RecordType>
    <fullName>SPEN_VoiceAlertBroadcast</fullName>
    <active>true</active>
    <description>Use this record type to initiate an Voice Alert broadcast.</description>
    <label>Voice Alert Broadcast</label>
</RecordType>