force-app/main/default/objects/SPEN_CommunicationScheduler__c/validationRules/SmsBroadcastRequiredFieldAction.validationRule-meta.xml
<ValidationRule>
    <fullName>SmsBroadcastRequiredFieldAction</fullName>
    <active>false</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;SmsBroadcast&quot; &amp;&amp; 
ISPICKVAL(SPEN_Action__c, &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>SPEN_Action__c</errorDisplayField>
    <errorMessage>The action field is required if the Record Type is SMS Broadcast.</errorMessage>
</ValidationRule>