force-app/main/default/objects/SPEN_CommunicationScheduler__c/validationRules/SmsBroadcastRequiredFieldIncident.validationRule-meta.xml
<ValidationRule>
    <fullName>SmsBroadcastRequiredFieldIncident</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;SmsBroadcast&quot; &amp;&amp; 
ISBLANK(SPEN_IncidentId__c) &amp;&amp; TEXT(SPEN_Event__c) != &apos;Medically Dependent by District&apos; &amp;&amp; TEXT(SPEN_Event__c) != &apos;Planned Outage Communication&apos; &amp;&amp; TEXT(SPEN_Event__c) != &apos;On Demand&apos;</errorConditionFormula>
    <errorDisplayField>SPEN_IncidentId__c</errorDisplayField>
    <errorMessage>The incident field is required if the Record Type is SMS Broadcast.</errorMessage>
</ValidationRule>