force-app/main/default/objects/SPEN_CommunicationScheduler__c/validationRules/SmsBroadcastRequiredFieldMessage.validationRule-meta.xml
<ValidationRule>
    <fullName>SmsBroadcastRequiredFieldMessage</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;SmsBroadcast&quot; &amp;&amp; 
AND(ISBLANK(SPEN_Message__c),ISBLANK(SPEN_NonPSRMessage__c))</errorConditionFormula>
    <errorMessage>The message or Non PSR Message
 field is required if the Record Type is SMS Broadcast.</errorMessage>
</ValidationRule>