force-app/main/default/objects/SPEN_CommunicationScheduler__c/validationRules/SmsBroadcastRequiredFieldMessagingTask.validationRule-meta.xml
<ValidationRule>
    <fullName>SmsBroadcastRequiredFieldMessagingTask</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;SmsBroadcast&quot; &amp;&amp; 
ISBLANK(SPEN_MessagingTaskId__c) &amp;&amp; TEXT(SPEN_Event__c) != &apos;Medically Dependent by District&apos;  &amp;&amp; TEXT(SPEN_Event__c) != &apos;Planned Outage Communication&apos;</errorConditionFormula>
    <errorDisplayField>SPEN_MessagingTaskId__c</errorDisplayField>
    <errorMessage>The message task field is required if the Record Type is SMS Broadcast.</errorMessage>
</ValidationRule>