force-app/main/default/objects/SPEN_CommunicationScheduler__c/validationRules/SmsBroadcastRequiredFieldScheduledDateTi.validationRule-meta.xml
<ValidationRule>
    <fullName>SmsBroadcastRequiredFieldScheduledDateTi</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.DeveloperName = &quot;SmsBroadcast&quot; &amp;&amp; 
SPEN_SendNow__c = FALSE &amp;&amp;
ISBLANK(SPEN_ScheduledDateTime__c)</errorConditionFormula>
    <errorDisplayField>SPEN_ScheduledDateTime__c</errorDisplayField>
    <errorMessage>The Scheduled DateTime field is required if the Record Type is SMS Broadcast and Send Now = False.</errorMessage>
</ValidationRule>