force-app/main/default/objects/SPEN_CommunicationScheduler__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_Event__c</columns>
    <columns>SPEN_CommunicationSchedulerType__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SPEN_SendSMSMCtoPSR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>