force-app/main/default/objects/SPEN_CommunicationScheduler__c/listViews/SPD_Planned_Comm_Scheduler.listView-meta.xml
<ListView>
    <fullName>SPD_Planned_Comm_Scheduler</fullName>
    <columns>NAME</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_Event__c</columns>
    <columns>SPEN_CommunicationSchedulerType__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SPEN_SendSMSMCtoPSR__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Event__c</field>
        <operation>equals</operation>
        <value>Planned Outage Communication</value>
    </filters>
    <label>SPD Planned Comm Scheduler</label>
</ListView>