force-app/main/default/objects/SPEN_CommunicationScheduler__c/listViews/SPEN_ScheduledCommunications.listView-meta.xml
<ListView>
    <fullName>SPEN_ScheduledCommunications</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>SPEN_District__c</columns>
    <columns>SPEN_ScheduledDateTime__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_SendNow__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Scheduled Communications</label>
</ListView>