force-app/main/default/objects/SPEN_CommunicationScheduler__c/listViews/Voice_Alerts_Explain.listView-meta.xml
<ListView>
    <fullName>Voice_Alerts_Explain</fullName>
    <columns>NAME</columns>
    <columns>SPEN_IncidentId__c</columns>
    <columns>SPEN_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPEN_Event__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>SPEN_MessagingTaskId__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPEN_CommunicationScheduler__c.SPEN_VoiceAlertBroadcast</value>
    </filters>
    <label>Voice Alerts - Explain</label>
</ListView>